--- a/examples/.msvc/zadig_2010.vcxproj.filters
+++ b/examples/.msvc/zadig_2010.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\profile.c">
+    <ClCompile Include="..\..\common\profile\profile.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\zadig.c">
@@ -26,10 +26,10 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\libwdi\msapi_utf8.h">
+    <ClInclude Include="..\..\common\msapi_utf8.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\profile.h">
+    <ClInclude Include="..\..\common\profile\profile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\zadig_resource.h">
