--- a/libwdi/.msvc/installer_x64_2010.vcxproj.filters
+++ b/libwdi/.msvc/installer_x64_2010.vcxproj.filters
@@ -19,7 +19,7 @@
     <ClInclude Include="..\installer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\msapi_utf8.h">
+    <ClInclude Include="..\..\common\msapi_utf8.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
