--- a/libwdi/.msvc/libwdi_dll_2008.vcproj
+++ b/libwdi/.msvc/libwdi_dll_2008.vcproj
@@ -361,7 +361,7 @@ embedder embedded.h"
 				>
 			</File>
 			<File
-				RelativePath="..\msapi_utf8.h"
+				RelativePath="..\..\common\msapi_utf8.h"
 				>
 			</File>
 			<File
