--- a/libwdi/.msvc/installer_x64_2008.vcproj
+++ b/libwdi/.msvc/installer_x64_2008.vcproj
@@ -184,7 +184,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\msapi_utf8.h"
+				RelativePath="..\..\common\msapi_utf8.h"
 				>
 			</File>
 		</Filter>
