--- a/libwdi/.msvc/installer_x86_2008.vcproj
+++ b/libwdi/.msvc/installer_x86_2008.vcproj
@@ -183,7 +183,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\msapi_utf8.h"
+				RelativePath="..\..\common\msapi_utf8.h"
 				>
 			</File>
 		</Filter>
