--- a/libwdi/.msvc/libwdi_static_2010.vcxproj
+++ b/libwdi/.msvc/libwdi_static_2010.vcxproj
@@ -73,12 +73,7 @@
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">libwdi</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <PreBuildEvent>
-      <Message>Embedding binary resources</Message>
-      <Command>cd $(ProjectDir)\..
-if exist embedded.no_is ren embedded.no_is embedded.h
-embedder embedded.h</Command>
-    </PreBuildEvent>
+    <PreBuildEvent />
     <ClCompile>
       <AdditionalIncludeDirectories>..\..\msvc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>DEBUG;_DEBUG;_WIN32;_LIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -93,22 +88,23 @@ embedder embedded.h</Command>
     </ResourceCompile>
     <Lib>
       <OutputFile>$(OutDir)libwdi.lib</OutputFile>
+      <AdditionalDependencies>version.lib;setupapi.lib;wdi_data.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions>/ignore:4006 /ignore:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
-    <PostBuildEvent>
-      <Command>cd $(ProjectDir)\..
-ren embedded.h embedded.no_is</Command>
-    </PostBuildEvent>
-    <PostBuildEvent>
-      <Message>rename embedded.h, to avoid Intellisense hogging CPU time parsing it</Message>
-    </PostBuildEvent>
+    <PostBuildEvent />
+    <PostBuildEvent />
+    <PreLinkEvent>
+      <Command>cd $(ProjectDir)..
+bin2coff wdi_data.7z "$(OutDir)wdi_data.lib"</Command>
+      <Message>Generating WDI data library</Message>
+    </PreLinkEvent>
+    <ProjectReference>
+      <LinkLibraryDependencies>true</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <PreBuildEvent>
-      <Message>Embedding binary resources</Message>
-      <Command>cd $(ProjectDir)\..
-if exist embedded.no_is ren embedded.no_is embedded.h
-embedder embedded.h</Command>
-    </PreBuildEvent>
+    <PreBuildEvent />
     <ClCompile>
       <AdditionalIncludeDirectories>..\..\msvc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>DEBUG;_DEBUG;_WIN32;_WIN64;_LIB;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -122,22 +118,23 @@ embedder embedded.h</Command>
     </ResourceCompile>
     <Lib>
       <OutputFile>$(OutDir)libwdi.lib</OutputFile>
+      <AdditionalDependencies>version.lib;setupapi.lib;wdi_data.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions>/ignore:4006 /ignore:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
-    <PostBuildEvent>
-      <Command>cd $(ProjectDir)\..
-ren embedded.h embedded.no_is</Command>
-    </PostBuildEvent>
-    <PostBuildEvent>
-      <Message>rename embedded.h, to avoid Intellisense hogging CPU time parsing it</Message>
-    </PostBuildEvent>
+    <PostBuildEvent />
+    <PostBuildEvent />
+    <PreLinkEvent>
+      <Command>cd $(ProjectDir)..
+bin2coff wdi_data.7z "$(OutDir)wdi_data.lib" 64bit</Command>
+      <Message>Generating WDI data library</Message>
+    </PreLinkEvent>
+    <ProjectReference>
+      <LinkLibraryDependencies>true</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <PreBuildEvent>
-      <Message>Embedding binary resources</Message>
-      <Command>cd $(ProjectDir)\..
-if exist embedded.no_is ren embedded.no_is embedded.h
-embedder embedded.h</Command>
-    </PreBuildEvent>
+    <PreBuildEvent />
     <ClCompile>
       <Optimization>MinSpace</Optimization>
       <AdditionalIncludeDirectories>..\..\msvc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -150,22 +147,23 @@ embedder embedded.h</Command>
     </ResourceCompile>
     <Lib>
       <OutputFile>$(OutDir)libwdi.lib</OutputFile>
+      <AdditionalDependencies>version.lib;setupapi.lib;wdi_data.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions>/ignore:4006 /ignore:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
-    <PostBuildEvent>
-      <Command>cd $(ProjectDir)\..
-ren embedded.h embedded.no_is</Command>
-    </PostBuildEvent>
-    <PostBuildEvent>
-      <Message>rename embedded.h, to avoid Intellisense hogging CPU time parsing it</Message>
-    </PostBuildEvent>
+    <PostBuildEvent />
+    <PostBuildEvent />
+    <PreLinkEvent>
+      <Command>cd $(ProjectDir)..
+bin2coff wdi_data.7z "$(OutDir)wdi_data.lib"</Command>
+      <Message>Generating WDI data library</Message>
+    </PreLinkEvent>
+    <ProjectReference>
+      <LinkLibraryDependencies>true</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <PreBuildEvent>
-      <Message>Embedding binary resources</Message>
-      <Command>cd $(ProjectDir)\..
-if exist embedded.no_is ren embedded.no_is embedded.h
-embedder embedded.h</Command>
-    </PreBuildEvent>
+    <PreBuildEvent />
     <ClCompile>
       <Optimization>MinSpace</Optimization>
       <AdditionalIncludeDirectories>..\..\msvc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -178,16 +176,23 @@ embedder embedded.h</Command>
     </ResourceCompile>
     <Lib>
       <OutputFile>$(OutDir)libwdi.lib</OutputFile>
+      <AdditionalDependencies>version.lib;setupapi.lib;wdi_data.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalOptions>/ignore:4006 /ignore:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
-    <PostBuildEvent>
-      <Command>cd $(ProjectDir)\..
-ren embedded.h embedded.no_is</Command>
-    </PostBuildEvent>
-    <PostBuildEvent>
-      <Message>rename embedded.h, to avoid Intellisense hogging CPU time parsing it</Message>
-    </PostBuildEvent>
+    <PostBuildEvent />
+    <PostBuildEvent />
+    <PreLinkEvent>
+      <Command>cd $(ProjectDir)..
+bin2coff wdi_data.7z "$(OutDir)wdi_data.lib" 64bit</Command>
+      <Message>Generating WDI data library</Message>
+    </PreLinkEvent>
+    <ProjectReference>
+      <LinkLibraryDependencies>true</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\7z.c" />
     <ClCompile Include="..\libwdi.c" />
     <ClCompile Include="..\libwdi_dlg.c" />
     <ClCompile Include="..\logging.c" />
@@ -197,31 +202,26 @@ ren embedded.h embedded.no_is</Command>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\msvc\config.h" />
+    <ClInclude Include="..\7z.h" />
     <ClInclude Include="..\installer.h" />
     <ClInclude Include="..\libwdi.h" />
     <ClInclude Include="..\logging.h" />
-    <ClInclude Include="..\msapi_utf8.h" />
+    <ClInclude Include="..\..\common\msapi_utf8.h" />
     <ClInclude Include="..\mssign32.h" />
     <ClInclude Include="..\resource.h" />
     <ClInclude Include="..\tokenizer.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\libusb0.cat.in" />
     <None Include="..\libusb0.inf.in" />
+    <None Include="..\libusbk.cat.in" />
+    <None Include="..\winusb.cat.in" />
     <None Include="..\winusb.inf.in" />
     <None Include="..\libusbk.inf.in" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="embedder_2010.vcxproj">
-      <Project>{792d44d5-28a7-4eb3-b84b-8021fe3189f9}</Project>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
-    <ProjectReference Include="installer_x64_2010.vcxproj">
-      <Project>{e5a56ee0-182f-470f-8cdc-8c1b7b86ee26}</Project>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
-    <ProjectReference Include="installer_x86_2010.vcxproj">
-      <Project>{9b1c561e-f95b-4849-a7aa-a4350e227c20}</Project>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+    <ProjectReference Include="..\..\common\7z\.msvc\7z.vcxproj">
+      <Project>{86f6d9c9-c9f0-8308-17d9-997ba526cb0f}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
