--- a/examples/.msvc/inf_wizard_2010.vcxproj
+++ b/examples/.msvc/inf_wizard_2010.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectName>inf-wizard</ProjectName>
     <ProjectGuid>{FCAEB263-64F1-4CB3-8173-A65DC62850B3}</ProjectGuid>
-    <RootNamespace>zadig</RootNamespace>
+    <RootNamespace>inf-wizard</RootNamespace>
     <Keyword>Win32Proj</Keyword>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
