--- a/libwdi/.msvc/libwdi_dll_2010.vcxproj.filters
+++ b/libwdi/.msvc/libwdi_dll_2010.vcxproj.filters
@@ -64,6 +64,9 @@
     <ClInclude Include="..\7z.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\profile\profile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\libwdi.def">
