--- a/libwdi/.msvc/libwdi_dll_2010.vcxproj
+++ b/libwdi/.msvc/libwdi_dll_2010.vcxproj
@@ -157,6 +157,7 @@ bin2coff wdi_data.7z "$(OutDir)wdi_data.lib" 64bit</Command>
       <EmbedManagedResourceFile>../libwdi.rc;%(EmbedManagedResourceFile)</EmbedManagedResourceFile>
       <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreSpecificDefaultLibraries>libcmt;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
+      <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
     <PreLinkEvent>
       <Message>Generating WDI data library</Message>
@@ -187,6 +188,7 @@ bin2coff wdi_data.7z "$(OutDir)wdi_data.lib"</Command>
       <EmbedManagedResourceFile>../libwdi.rc;%(EmbedManagedResourceFile)</EmbedManagedResourceFile>
       <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <IgnoreSpecificDefaultLibraries>libcmt;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
+      <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
     <PreLinkEvent>
       <Message>Generating WDI data library</Message>
@@ -204,6 +206,7 @@ bin2coff wdi_data.7z "$(OutDir)wdi_data.lib" 64bit</Command>
     <ClCompile Include="..\vid_data.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\common\profile\profile.h" />
     <ClInclude Include="..\..\msvc\config.h" />
     <ClInclude Include="..\7z.h" />
     <ClInclude Include="..\installer.h" />
@@ -228,7 +231,10 @@ bin2coff wdi_data.7z "$(OutDir)wdi_data.lib" 64bit</Command>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\common\7z\.msvc\7z.vcxproj">
-      <Project>{a89bc9e5-37d9-5be8-d704-3d0e1173fa43}</Project>
+      <Project>{FB6D52D4-A2F8-C358-DB85-BBCAECFDDD7D}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\common\profile\.msvc\profile_2010.vcxproj">
+      <Project>{5e62a6b1-fd77-46b2-bd1c-4f358b1fb694}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
