--- a/libwdi/.msvc/libwdi_static_2010.vcxproj
+++ b/libwdi/.msvc/libwdi_static_2010.vcxproj
@@ -150,6 +150,7 @@ bin2coff wdi_data.7z "$(OutDir)wdi_data.lib" 64bit</Command>
       <AdditionalDependencies>version.lib;setupapi.lib;wdi_data.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>/ignore:4006 /ignore:4221 %(AdditionalOptions)</AdditionalOptions>
+      <LinkTimeCodeGeneration>true</LinkTimeCodeGeneration>
     </Lib>
     <PostBuildEvent />
     <PostBuildEvent />
@@ -179,6 +180,7 @@ bin2coff wdi_data.7z "$(OutDir)wdi_data.lib"</Command>
       <AdditionalDependencies>version.lib;setupapi.lib;wdi_data.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>/ignore:4006 /ignore:4221 %(AdditionalOptions)</AdditionalOptions>
+      <LinkTimeCodeGeneration>true</LinkTimeCodeGeneration>
     </Lib>
     <PostBuildEvent />
     <PostBuildEvent />
@@ -201,6 +203,7 @@ bin2coff wdi_data.7z "$(OutDir)wdi_data.lib" 64bit</Command>
     <ClCompile Include="..\vid_data.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\common\profile\profile.h" />
     <ClInclude Include="..\..\msvc\config.h" />
     <ClInclude Include="..\7z.h" />
     <ClInclude Include="..\installer.h" />
@@ -221,7 +224,10 @@ bin2coff wdi_data.7z "$(OutDir)wdi_data.lib" 64bit</Command>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\common\7z\.msvc\7z.vcxproj">
-      <Project>{a89bc9e5-37d9-5be8-d704-3d0e1173fa43}</Project>
+      <Project>{FB6D52D4-A2F8-C358-DB85-BBCAECFDDD7D}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\common\profile\.msvc\profile_2010.vcxproj">
+      <Project>{5e62a6b1-fd77-46b2-bd1c-4f358b1fb694}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
